tests/parse-fail/bad_array.fl.0.exp
Error: bad_array.fl(3,22): Expected closing bracket, but found: ;
pub mod bad_array {
    pub struct BadArray {
        pub a : @[int;
                     ^ 
    }
}
