tests/parse-fail/bad_array.fl
pub mod bad_array {
    pub struct BadArray {
        pub a : @[int;
    }
}
